[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "starcatcher"
dynamic = ["version"]
dependencies = [
    "dotenv",
    "py-cord",
    "pygithub",
    "dulwich",
    "alembic",
    "sqlalchemy",
    "psycopg2",
]
requires-python = ">= 3.10"
license = "GPL-3.0-only"
